# recommender_system_dagster

./: .gitignore  README.md  pyproject.toml  pyproject.toml.bj  setup.py
environments/: local
notebooks/: download_and_test_assets.py  partition_assets.py  run_assets.py
recommender_system/: configs.py  definitions.py
recommender_system/assets/: __init__.py
recommender_system/assets/core/: movies_users.py  ratings_partitioned.py
recommender_system/assets/recommender/: train_model.py
